--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Support/helpers.php"
+        ]
     },
     "config": {
         "preferred-install": "dist",
