--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.9",
         "illuminate/database": "5.8.*",
         "illuminate/log": "5.8.*",
         "intonate/tinker-zero": "^1.0",
